# ai-digest-bot

./: .env.example  .gitignore  LICENSE  README.md  ai_digest_bot.py  bot.js  bot.py  digest.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  daily-news.yml  digest.yml
ai_digest/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
ai_digest/ai/: __init__.py  gemini_client.py  parser.py  prompts.py
ai_digest/digest/: __init__.py  service.py
ai_digest/sources/: __init__.py  collector.py  feeds.py  filters.py
ai_digest/telegram/: __init__.py  client.py  formatter.py  splitter.py
archive/: README.md  package.json
tests/: test_ai.py  test_cli.py  test_config.py  test_digest.py  test_importance_ordering.py  test_logging.py  test_run_summary.py  test_service.py  test_sources.py
