[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-digest-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-genai==2.7.0",
    "requests==2.34.2",
    "schedule==1.2.2",
]

[project.scripts]
ai-digest = "ai_digest.__main__:main"

[tool.setuptools.packages.find]
include = ["ai_digest*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — handled by black
    "E741",  # ambiguous variable name
]

[tool.ruff.lint.isort]
known-first-party = ["ai_digest", "digest"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = 'archive/'

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
exclude = ["archive/"]

[[tool.mypy.overrides]]
module = "ai_digest.*"
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
